add back button and update gallery images in galerie

--- a/html/galerie.html
+++ b/html/galerie.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="../css/galerie.css">
 </head>
 <body>
+<a href="index.html" class="btn-back">← Accueil</a>
 
 <header>
     <h1>Chaque instant avec toi est un trésor... ✨</h1>
-    <p class="subtitle">Accrochés ici pour ne jamais les oublier.</p>
+    <p class="subtitle">Merci pour tout ❤️❤️</p>
 </header>
 
 <div class="wall" id="gallery-wall">
