enhance visual effects and animations in box component

--- a/html/box.html
+++ b/html/box.html
@@ -16,7 +16,7 @@
 
 <div id="message">
     <h1>BOUM ! ❤️</h1>
-    <p><b>Ça, c'était juste pour te faire chier 🫶</b></p>
+    <h2><strong>Ça, c'était juste pour te faire chier 🫶</strong></h2>
 </div>
 
 <script src="../js/box.js"></script>
