update styles and functionality for poem and game components

--- a/html/index.html
+++ b/html/index.html
@@ -7,10 +7,11 @@
     <link href="../css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+<div id="heart-container"></div>
 
 <div class="container">
     <div class="poem-wrapper">
-        <div class="poem" id="poem"></div><span class="cursor" id="cursor"></span>
+        <div class="poem" id="poem"></div><span class="cursor">|</span>
     </div>
 
     <div class="games-list">
