update gallery content and quiz questions for enhanced user experience

--- a/html/galerie.html
+++ b/html/galerie.html
@@ -12,6 +12,7 @@
 <header>
     <h1>Chaque instant avec toi est un trésor... ✨</h1>
     <p class="subtitle">Merci pour tout ❤️❤️</p>
+    <p class="subtitle">Je t'aime ❤️ </p>
 </header>
 
 <div class="wall" id="gallery-wall">
