--- a/html/galerie.html
+++ b/html/galerie.html
@@ -10,7 +10,7 @@
 <a href="index.html" class="btn-back">← Accueil</a>
 
 <header>
-    <h1>Chaque instant avec toi est un trésor... ✨</h1>
+    <h1>Chaque instant avec toi est un trésor ✨</h1>
     <p class="subtitle">Merci pour tout ❤️❤️</p>
     <p class="subtitle">Je t'aime ❤️ </p>
 </header>
